--- a/css/ProjectC.css
+++ b/css/ProjectC.css
@@ -31,7 +31,6 @@
         height: 800px;
         display: inline-block;
         background-color: gray;
-        opacity: 0.3;
         border-top-width: 20px;
         border-right-width: 2px;
         border-left-width: 2px;
@@ -45,7 +44,6 @@
         height: 800px;
         display: inline-block;
         background-color: gray;
-        opacity: 0.3;
         border-top-width: 20px;
         border-right-width: 2px;
         border-left-width: 2px;
@@ -59,7 +57,7 @@
         height: 800px;
         display: inline-block;
         background-color: gray;
-        opacity: 0.3;
+        ;
     }
     
     #EnergyClicker {
@@ -75,7 +73,6 @@
         width: 45%;
         margin: auto;
         padding-top: 10px;
-        opacity: 1.0;
         color: black;
         font-family: 'Raleway', sans-serif;
         font-size: 25px;
@@ -133,3 +130,19 @@
         font-family: 'VT323', ;
         color: green;
     }
+    
+    .navBar{
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        margin: auto;
+    }
+    
+    .navItem{
+        height: 70px;
+        width: 20%;
+        background-color: Black;
+        color: green;
+        
+    }
+    
